--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,33 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.504
+head: 1.508
 branch:
 locks: strict
-	gilles: 1.504
+	gilles: 1.508
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 504;	selected revisions: 504
+total revisions: 508;	selected revisions: 508
 description:
 ----------------------------
-revision 1.504	locked by: gilles;
+revision 1.508	locked by: gilles;
+date: 2012/09/10 21:10:13;  author: gilles;  state: Exp;  lines: +81 -17
+Added ETA after each copy. Estimated Time of Arrival.
+----------------------------
+revision 1.507
+date: 2012/09/09 12:57:44;  author: gilles;  state: Exp;  lines: +20 -12
+Bugfix. Previous fix about characters *|?:"<> in cache path was not complete.
+----------------------------
+revision 1.506
+date: 2012/09/07 14:51:00;  author: gilles;  state: Exp;  lines: +10 -7
+Option. Added --noexpungeaftereach to speedup --delete --expunge from Gmail.
+----------------------------
+revision 1.505
+date: 2012/09/07 10:40:55;  author: gilles;  state: Exp;  lines: +10 -10
+Usability. Added Host1 or Host2 before "Nb messages" "Total size" with --foldersiszes
+----------------------------
+revision 1.504
 date: 2012/08/28 13:10:26;  author: gilles;  state: Exp;  lines: +10 -9
 Bugfix. sentsince sentbefore in int seconds.
 ----------------------------
