--- a/FAQ
+++ b/FAQ
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: FAQ,v 1.114 2012/07/19 09:42:13 gilles Exp gilles $
+# $Id: FAQ,v 1.116 2012/09/11 21:00:06 gilles Exp gilles $
 
 +------------------+
 | FAQ for imapsync |
@@ -262,13 +262,13 @@ R. - Download latest Mail::IMAPClient 3.xx at
    - run imapsync with perl and -I option tailing to use the perl
      module Mail-IMAPClient-3.xx. Example:
 
-         perl -I./Mail-IMAPClient-3.31/lib  ./imapsync ...
+         perl -I./Mail-IMAPClient-3.32/lib  ./imapsync ...
 
      or if imapsync is in directory /path/
-        perl -I./Mail-IMAPClient-3.31/lib   /path/imapsync ...
+        perl -I./Mail-IMAPClient-3.32/lib   /path/imapsync ...
 
    - Look at the script named i3 in the tarball, it can be used to
-     run imapsync with included Mail-IMAPClient-3.31/ wherever you 
+     run imapsync with included Mail-IMAPClient-3.32/ wherever you 
      unpacked the imapsync tarball
 
 =======================================================================
@@ -1369,15 +1369,16 @@ R. GroupWise 7 seems buggy. Apply GroupWise 7 support pack 1
 =======================================================================
 Q. Migrating from David Tobit V10
 
-R. Use the following options :
-imapsync ... --prefix1 ""    --sep1 /  --idatefromheader    ^
-             --nofoldersizes --useuid
+R. Use the following options:
 
-
-=======================================================================
+imapsync ... --prefix1 ""    --sep1 /  --idatefromheader ^
+             --nofoldersizes --useuid --nocheckmessageexists
 
 =======================================================================
 Q. Migrating from David Tobit V8
+
+First try above V10 solution since improvments have been made
+to support Tobit.
 
 R. Use the following options :
 imapsync ... --prefix1 INBOX. --sep1 / --subscribe --subscribed 
@@ -1385,6 +1386,9 @@ imapsync ... --prefix1 INBOX. --sep1 / --subscribe --subscribed
 =======================================================================
 Q. Migrating from Tobit David Server 6 
    ("DvISE Mail Access Server MA-6.60a (0118)")
+
+First try above V10 solution since improvments have been made
+to support Tobit.
 
 R. Look at the discussion:
 http://www.linux-france.org/prj/imapsync_list/msg00582.html
