--- a/W/Mail-IMAPClient-3.32/Changes
+++ b/W/Mail-IMAPClient-3.32/Changes
@@ -5,6 +5,27 @@ Changes from 2.99_01 to 3.16    made by Mark Overmeer
 Changes from 0.09    to 2.99_01 made by David Kernen
 	- Potential compatibility issues from 3.17+ highlighted with '*'
 
+version 3.32: Fri, Aug 10, 2012  4:43:24 PM
+	- document RFC2087 quota related calls
+          [Mathias Reitinger] documentation request
+	- rt.cpan.org#78474: idle/idle_data documentation error
+          [Dima Kogan]
+	- Quote()/Massage() now uses literals for non ascii data
+          [Mathias Reitinger] reported issues with utf8 data in password
+	- use Quote()/Massage() consistently now in:
+	    login() proxyauth() deleteacl() setacl() listrights() rename()
+	- documented deleteacl() and other minor pod cleanup
+	- ran Mail::IMAPClient::BodyStructure through perltidy
+	- update year in README/pod to 2012
+	- rt.cpan.org#74733: Fails with Parse::RecDescent >= 1.966_002
+          rt.cpan.org#74593: Recent changes break Module::ExtractUse and ...
+	  [ANDK, TEAM, SREZIC, NBEBOUT at CPAN and nine from detonation]
+	  - Makefile.PL avoid buggy Parse::RecDescent 1.966_002 until 1.967_009
+	- rt.cpan.org#76989: Mail::IMAPClient::BodyStructure usage/docs
+	  [Pierluigi Frullani]
+	  - fix incorrect documentation on new()
+	  - lots of doc verbiage updates
+
 version 3.31: Mon, Mar 19, 2012 11:11:11 AM
 	- rt.cpan.org#74799: Support for partial data responses in fetch_hash
 	  [Philip Garrett]
