--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,54 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.508
+head: 1.516
 branch:
 locks: strict
-	gilles: 1.508
+	gilles: 1.516
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 508;	selected revisions: 508
+total revisions: 516;	selected revisions: 516
 description:
 ----------------------------
-revision 1.508	locked by: gilles;
+revision 1.516	locked by: gilles;
+date: 2012/11/02 22:15:04;  author: gilles;  state: Exp;  lines: +43 -38
+Added current date at the beginning of the run, useful when imapsync doesn't end properly or hasn't finished yet.
+Better output for diff statistics.
+----------------------------
+revision 1.515
+date: 2012/10/31 12:56:02;  author: gilles;  state: Exp;  lines: +12 -9
+Added Initial difference to compare it with Final difference.
+----------------------------
+revision 1.514
+date: 2012/10/31 01:39:38;  author: gilles;  state: Exp;  lines: +32 -16
+Added --foldersizesatend and --nofoldersizesatend, on by default.
+Added statistic host2 minus host1: number of messages and bytes.
+----------------------------
+revision 1.513
+date: 2012/10/30 22:31:49;  author: gilles;  state: Exp;  lines: +40 -19
+Add --fixslash2 to avoid 'Invalid mailbox name' when --sep2 is not / and sep1 is / and host1 folders contain --sep2 characters.
+----------------------------
+revision 1.512
+date: 2012/10/30 01:44:26;  author: gilles;  state: Exp;  lines: +22 -8
+Added option --showpasswords
+--showpasswords        : shows passwords on output instead of "MASKED".
+Off by default.
+----------------------------
+revision 1.511
+date: 2012/10/27 22:37:57;  author: gilles;  state: Exp;  lines: +44 -20
+Added --delete2duplicates; Delete messages in host2 that are duplicates.
+--delete2duplicates is on when --delete2 is on unless --nodelete2duplicates.
+----------------------------
+revision 1.510
+date: 2012/10/27 15:18:44;  author: gilles;  state: Exp;  lines: +36 -30
+Added --pidfilelocking option to abort in case another imapsync may be running.
+----------------------------
+revision 1.509
+date: 2012/10/24 14:57:56;  author: gilles;  state: Exp;  lines: +41 -13
+Added option --noabletosearch to allow listing messages without SEARCH command. Hack for imap server softalk 7.6.4. (8.6 is fine about search)
+----------------------------
+revision 1.508
 date: 2012/09/10 21:10:13;  author: gilles;  state: Exp;  lines: +81 -17
 Added ETA after each copy. Estimated Time of Arrival.
 ----------------------------
