--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 44 different IMAP server softwares supported with success.
 
-    $Revision: 1.508 $
+    $Revision: 1.516 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -85,7 +85,7 @@ USAGE
                [--expunge] [--expunge1] [--expunge2] [--uidexpunge2]
                [--delete2folders] [--delete2foldersonly] [--delete2foldersbutnot]
                [--subscribed] [--subscribe] [--subscribe_all] 
-               [--nofoldersizes]
+               [--nofoldersizes] [--nofoldersizesatend] 
                [--dry]
                [--debug] [--debugimap][--debugimap1][--debugimap2]
                [--timeout <int>] [--fast]
@@ -354,7 +354,7 @@ IMAP SERVERS
      - Qualcomm Worldmail (NT)
      - Rockliffe Mailsite 5.3.11, 4.5.6
      - Samsung Contact IMAP server 8.5.0
-     - Scalix v10.1, 10.0.1.3, 11.0.0.431
+     - Scalix v10.1, 10.0.1.3, 11.0.0.431, 11.4.6
      - SmarterMail, Smarter Mail 5.0 Enterprise, Smarter Mail 5.5 [host1].
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - Sun Java(tm) System Messaging Server 6.2-2.05,  6.2-7.05, 6.3
@@ -440,5 +440,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.508 2012/09/10 21:10:13 gilles Exp gilles $
+    $Id: imapsync,v 1.516 2012/11/02 22:15:04 gilles Exp gilles $
 
