--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.113 2012/09/11 20:58:32 gilles Exp gilles $
+# $Id: TODO,v 1.114 2012/11/02 22:19:14 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -62,7 +62,6 @@ http://mail.google.com/support/bin/answer.py?answer=78892
 Look at larch https://github.com/rgrove/larch/ 
 http://wonko.com/
 
-
 Add and option to sync to & from files.
 
 Add an --aclregextrans2 flag.
@@ -93,7 +92,6 @@ Maybe count messages not transfered because they're dupplicate.
 Fix bug "not possible to use space in the imap password"
 
 Add kerberos authentification
-
 
 Add stdin/stdout filter before transfer:
 "Now i asked me, how to modify your perl program to work with
@@ -142,6 +140,8 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 ===========================================================================
 
+DONE. Add current date at the beginning of the run, useful when imapsync
+doesn't finish with statistics.
 
 DONE. Not donse since useless now (--useuid)
 Add a --skipheaderinfolder option 
