--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.516
+head: 1.518
 branch:
 locks: strict
-	gilles: 1.516
+	gilles: 1.518
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 516;	selected revisions: 516
+total revisions: 518;	selected revisions: 518
 description:
 ----------------------------
-revision 1.516	locked by: gilles;
+revision 1.518	locked by: gilles;
+date: 2012/12/24 00:27:34;  author: gilles;  state: Exp;  lines: +9 -6
+Bugfix. When identtifying with header, change tabulations to spaces (Gmail bug on with "Received:" on multilines).
+----------------------------
+revision 1.517
+date: 2012/12/11 07:13:04;  author: gilles;  state: Exp;  lines: +17 -10
+Added Deerfield VisNetic MailServer 5.8.6
+Bugfix. Automatic --nocheckmessageexists when --noabletosearch is set.
+----------------------------
+revision 1.516
 date: 2012/11/02 22:15:04;  author: gilles;  state: Exp;  lines: +43 -38
 Added current date at the beginning of the run, useful when imapsync doesn't end properly or hasn't finished yet.
 Better output for diff statistics.
