--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 44 different IMAP server softwares supported with success.
 
-    $Revision: 1.516 $
+    $Revision: 1.518 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -301,7 +301,7 @@ IMAP SERVERS
        MDaemon is simply buggy with the APPEND IMAP command with 
        any IMAP email client.
 
-    Success stories reported with the following 44 imap servers (software
+    Success stories reported with the following 48 imap servers (software
     names are in alphabetic order):
 
      - 1und1 H mimap1 84498 [host1]
@@ -320,6 +320,7 @@ IMAP SERVERS
        2.3-alpha (OSI Approved), 2.3.1, 2.3.7, 2.3.16
        (http://asg.web.cmu.edu/cyrus/)
      - David Tobit V8 (proprietary Message system).
+     - Deerfield VisNetic MailServer 5.8.6 [host1] (http://www.deerfield.net/products/visnetic-mailserver/) 
      - DBMail 1.2.1, 2.0.4, 2.0.9, 2.2rc1 (GPL) (http://www.dbmail.org/).
        2.0.7 seems buggy.
      - Deerfield VisNetic MailServer 5.8.6 [host1]
@@ -356,6 +357,7 @@ IMAP SERVERS
      - Samsung Contact IMAP server 8.5.0
      - Scalix v10.1, 10.0.1.3, 11.0.0.431, 11.4.6
      - SmarterMail, Smarter Mail 5.0 Enterprise, Smarter Mail 5.5 [host1].
+     - Softalk Workgroup Mail 7.6.4 [host1].
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - Sun Java(tm) System Messaging Server 6.2-2.05,  6.2-7.05, 6.3
      - Surgemail 3.6f5-5
@@ -440,5 +442,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.516 2012/11/02 22:15:04 gilles Exp gilles $
+    $Id: imapsync,v 1.518 2012/12/24 00:27:34 gilles Exp gilles $
 
