--- a/README
+++ b/README
@@ -195,9 +195,9 @@ EXIT STATUS
 
 LICENSE
     imapsync is free, open source but not always gratis software cover by
-    the Do What The Fuck You Want To Public License (WTFPL). See COPYING
+    the No Limit Public License (NLPL). See COPYING
     file included in the distribution or the web site
-    http://sam.zoy.org/wtfpl/COPYING
+    http://imapsync.lamiral.info/COPYING
 
 MAILING-LIST
     The public mailing-list may be the best way to get support.
@@ -418,7 +418,7 @@ HUGE MIGRATION
     Welcome in shell programming !
 
 Hacking
-    Feel free to hack imapsync as the WTFPL Licence permits it.
+    Feel free to hack imapsync as the NLPL Licence permits it.
 
 Links
     Entries for imapsync: http://www.imap.org/products/showall.php
